# vdcrpt

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  README.rst  README_USER.md  README_USER.txt  Vdcrpt.sln  pyproject.toml  setup.py  tasks.py  vdcrpt.spec  windows.mk
Vdcrpt/: Effects.cs  Vdcrpt.csproj  Video.cs
Vdcrpt.Avi/: AviFile.cs  IAviManipulator.cs
Vdcrpt.Cli/: Program.cs
Vdcrpt.CommandLine/: Program.cs
Vdcrpt.Desktop/: App.axaml  App.axaml.cs  DelegateCommand.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindowViewModel.cs  Program.cs  Vdcrpt.Desktop.csproj
Vdcrpt.Gui/: MainWindow.axaml  Program.cs  Vdcrpt.Gui.csproj
Vdcrpt.Playground/: Program.cs  Vdcrpt.Playground.csproj
Vdcrpt.UI/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  Vdcrpt.UI.csproj
Vdcrpt.Ui/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
resources/: vdcrpt.icns
resources/vdcrpt.AppDir/: .DirIcon  AppRun  vdcrpt.desktop
src/: Vdcrpt.sln
src/Vdcrpt/: CacheUtility.cs  (+6 more)
src/Vdcrpt.BuiltIns/: Vdcrpt.BuiltIns.csproj
src/Vdcrpt.CommandLine/: Program.cs  Vdcrpt.CommandLine.csproj
src/Vdcrpt.Desktop/: App.axaml  App.axaml.cs  DelegateCommand.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindowViewModel.cs  Preset.cs  Program.cs  Vdcrpt.Desktop.csproj  ViewLocator.cs  ViewModelBase.cs
src/Vdcrpt.Next/: CacheUtility.cs  EffectContext.cs  IEffect.cs  Session.cs
src/Vdcrpt.Next.BuiltIns/: Vdcrpt.Next.BuiltIns.csproj
vdcrpt/: Effects.cs  Vdcrpt.csproj  Video.cs  cli.py  corruptions.py  corruptor.py  gui.py  main.qml
(+27 files in other folders)
